fixed alignment and order

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -96,10 +96,11 @@ input {
   font-size: 16px;
   margin-top: 5px;
 }
-
+.center-block {
+    text-align: center;
+}
 .comment_handle {
   color: #125688;
   font-weight: bold;
   font-size: 18px
 }
-
